--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <td width="50%">
                     <ul >
                         <li><a href="Curriculum_AyalaChristopher.html">Práctica 1</a></li>
-                        <li>Práctica 2</li>
+                        <li>Practica 2</li>
+                        <li><a href="P3/index.html">Práctica 2</a></li>
                     </ul>
                 </td>
                 <td width="10%">
