--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <li><a href="P4/index.html">Practica3</a></li>
                         <li><a href="Ej4/index.html">Practica 4</a></li>
                         <li><a href="practica5.1/index.html">Practica 5</a></li>
+                        <li><a href="P6/P6.html">Practica 6</a></li>
                     </ul>
                 </td>
                 <td width="10%">
