comit de flexbox

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <li><a href="Ej4/index.html">Practica 4</a></li>
                         <li><a href="practica5.1/index.html">Practica 5</a></li>
                         <li><a href="P6/P6.html">Practica 6</a></li>
+                        <li><a href="PFlexbox/flexboxclase.html">Practica 7</a></li>
                     </ul>
                 </td>
                 <td width="10%">
